(수정)UI 입력부 DB에 맞춰 조정

--- a/화면구성파일/BOM 등록.html
+++ b/화면구성파일/BOM 등록.html
@@ -339,6 +339,9 @@
                         <td>정미수량</td>
                         <td>LOSS(%)</td>
                         <td>필요수량</td>
+                        <td>표준원가</td>
+                        <td>실제원가</td>
+                        <td>외주단가</td>
                         <td>시작일자</td>
                         <td>종료일자</td>
                         <td>외주구분</td>
@@ -355,9 +358,11 @@
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
-                        <td><input type="date"/></td>
-                        <td><input type="date"/></td>
                         <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="date"/></td>
+                        <td><input type="date"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                     </tbody>
