--- a/화면구성파일/외주실적등록.html
+++ b/화면구성파일/외주실적등록.html
@@ -363,10 +363,9 @@
                         <td>단가</td>
                         <td>금액</td>
                         <td>실적수량</td>
+                        <td>실적잔량</td>
                         <td>상태</td>
-                        <td>LOT번호</td>
                         <td>검사</td>
-                        <td>고객</td>
                         <td>비고</td>
                     </thead>
                     <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
@@ -377,7 +376,6 @@
                         <td><input type="text"/></td>
                         <td><input type="date"/></td>
                         <td><input type="date"/></td>
-                        <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
@@ -405,12 +403,8 @@
                         <td>공정</td>
                         <td>작업장</td>
                         <td>구분</td>
-                        <td>실적구분</td>
                         <td>실적수량</td>
-                        <td>LOT번호</td>
                         <td>검사</td>
-                        <td>실적담당</td>
-                        <td>부적합명</td>
                         <td>비고</td>
                     </thead>
                     <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
@@ -419,10 +413,6 @@
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="date"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
