--- a/화면구성파일/작업지시확정.html
+++ b/화면구성파일/작업지시확정.html
@@ -341,6 +341,7 @@
                         <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
                         <td>작업지시번호</td>
                         <td>자재출고상태</td>
+                        <td>작업장</td>
                         <td>지시일</td>
                         <td>납기일</td>
                         <td>품번</td>
@@ -349,9 +350,7 @@
                         <td>단위</td>
                         <td>지시수량</td>
                         <td>상태</td>
-                        <td>LOT번호</td>
                         <td>검사</td>
-                        <td>고객</td>
                         <td>비고</td>
                     </thead>
                     <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
@@ -359,10 +358,9 @@
                         <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
+                        <td><input type="text"/></td>
                         <td><input type="date"/></td>
                         <td><input type="date"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
