--- a/화면구성파일/BOM 정전개.html
+++ b/화면구성파일/BOM 정전개.html
@@ -343,10 +343,8 @@
                         <td>정미수량</td>
                         <td>LOSS(%)</td>
                         <td>필요수량</td>
-                        <td>도면번호</td>
-                        <td>조거래처</td>
-                        <td>조달</td>
-                        <td>계정</td>
+                        <td>표준원가</td>
+                        <td>실제원가</td>
                         <td>외주</td>
                         <td>사용여부</td>
                         <td>비고</td>
@@ -354,8 +352,6 @@
                     <!-- BOM 정전개는 입력부 불필요 -->
                     <tr>
                         <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
-                        <td>출력 정보</td>
-                        <td>출력 정보</td>
                         <td>출력 정보</td>
                         <td>출력 정보</td>
                         <td>출력 정보</td>
