--- a/화면구성파일/생산자재출고.html
+++ b/화면구성파일/생산자재출고.html
@@ -377,7 +377,8 @@
                         <td>출고일자</td>
                         <td>출고창고</td>
                         <td>출고장소</td>
-                        <td>담당자</td>
+                        <td>공정</td>
+                        <td>작업장</td>
                         <td>비고</td>
                     </thead>
                     <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
@@ -385,6 +386,7 @@
                         <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
                         <td><input type="text"/></td>
                         <td><input type="date"/></td>
+                        <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
@@ -404,14 +406,16 @@
                             <td>품명</td>
                             <td>규격</td>
                             <td>단위</td>
-                            <td>요청수량</td>
+                            <td>정미수량</td>
+                            <td>LOSS(%)</td>
+                            <td>확정수량</td>
                             <td>출고수량</td>
-                            <td>LOT No.</td>
                             <td>비고</td>
                         </thead>
                         <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
                         <tbody>
                             <td><input type="checkbox" value = "check1" id="check" name="content2"/></td>
+                            <td><input type="text"/></td>
                             <td><input type="text"/></td>
                             <td><input type="text"/></td>
                             <td><input type="text"/></td>
