--- a/화면구성파일/작업실적등록.html
+++ b/화면구성파일/작업실적등록.html
@@ -353,6 +353,7 @@
                         <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
                         <td>작업지시번호</td>
                         <td>자재출고상태</td>
+                        <td>작업장</td>
                         <td>지시일</td>
                         <td>납기일</td>
                         <td>품번</td>
@@ -363,9 +364,7 @@
                         <td>실적수량</td>
                         <td>실적잔량</td>
                         <td>상태</td>
-                        <td>LOT번호</td>
                         <td>검사</td>
-                        <td>고객</td>
                         <td>비고</td>
                     </thead>
                     <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
@@ -373,10 +372,9 @@
                         <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
+                        <td><input type="text"/></td>
                         <td><input type="date"/></td>
                         <td><input type="date"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
@@ -402,12 +400,8 @@
                         <td>공정</td>
                         <td>작업장</td>
                         <td>구분</td>
-                        <td>실적구분</td>
                         <td>실적수량</td>
-                        <td>LOT번호</td>
                         <td>검사</td>
-                        <td>실적담당</td>
-                        <td>부적합명</td>
                         <td>비고</td>
                     </thead>
                     <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
@@ -421,11 +415,7 @@
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>     
                     </tbody>
                 </table>
             </div>
