--- a/화면구성파일/사업장등록.html
+++ b/화면구성파일/사업장등록.html
@@ -263,7 +263,8 @@
                             <li><a href="#">품목등록</a></li>
                             <li><a href="#">창고/공정/외주공정등록</a></li>
                             <li><a href="#">물류관리내역등록</a></li>
-                            <li><a href="#">물류실적담당자등록</a></li>
+                            <li><a href="#">물류실적담당자등록(고객)</a></li>
+                            <li><a href="#">물류실적담당자등록(품목)</a></li>
                             <li><a href="#">검사유형등록</a></li>
                             <li><a href="#">SET구성품등록</a></li>
                         </ul></li>
