--- a/화면구성파일/견적등록.html
+++ b/화면구성파일/견적등록.html
@@ -297,20 +297,20 @@
         <container1 id = contents1>
             <table class="con1_search">
                 <tr>
-                    <td>사업장</td>
+                    <td align="center">사업장</td>
                     <td><input type="text" name="" id=""></td>
                     <td><button>+</button></td>
-                    <td><input type="text"></td>
-                    <td>견적기간</td>
+                    <td><input type="text" disabled></td>
+                    <td align="center">견적기간</td>
                     <td><input type="date"></td>
                     <td>~</td>
                     <td><input type="date"></td>
                 </tr>
                 <tr>
-                    <td>고객</td>
+                    <td align="center">고객</td>
                     <td><input type="text"></td>
                     <td><button>+</button></td>
-                    <td><input type="text"></td>>
+                    <td><input type="text" disabled></td>
                 </tr>
             </table>
         </container1>
@@ -318,12 +318,12 @@
            <table id="view">
                 <thead>
                     <td><input type="checkbox" id="check" name="content" onclick="selectAll(this)"/></td>
-                    <td>견적번호</td>
-                    <td>견적일자</td>
-                    <td>고객</td>
-                    <td>과세구분</td>
-                    <td>단가구분</td>
-                    <td>비고</td>
+                    <td align="center">견적번호</td>
+                    <td align="center">견적일자</td>
+                    <td align="center">고객</td>
+                    <td align="center">과세구분</td>
+                    <td align="center">단가구분</td>
+                    <td align="center">비고</td>
                 </thead>
                 <tbody>
                     <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
@@ -339,19 +339,19 @@
         <container3 id="contents3">
             <table id="view">
                 <thead>
-                    <td style="width: 5%;"><input type="checkbox" name="content" onclick="selectAll(this)"></td>
-                    <td>품번</td>
-                    <td>품명</td>
-                    <td>규격</td>
-                    <td>납기일</td>
-                    <td>견적수량</td>
-                    <td>단가</td>
-                    <td>공급가</td>
-                    <td>부가세</td>
-                    <td>합계액</td>
+                    <td style="width: 5%;"><input type="checkbox" name="content1" onclick="selectAll1(this)"></td>
+                    <td align="center">품번</td>
+                    <td align="center">품명</td>
+                    <td align="center">규격</td>
+                    <td align="center">납기일</td>
+                    <td align="center">견적수량</td>
+                    <td align="center">단가</td>
+                    <td align="center">공급가</td>
+                    <td align="center">부가세</td>
+                    <td align="center">합계액</td>
                 </thead>
                 <tbody>
-                    <td style="width: 5%;"><input type="checkbox" value = "check1" id="check" name="content"/></td>
+                    <td style="width: 5%;"><input type="checkbox" value = "check1" id="check" name="content1"/></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
@@ -371,8 +371,6 @@
     <script>
         var side_button1 = document.getElementById('side1');
         var side_button2 = document.getElementById('side2');
-        var side_button3 = document.getElementById('side3');
-        var side_button4 = document.getElementById('side4');
         var search_box = document.getElementById('search');
         var num_box = document.getElementById('num');
         var save_button = document.getElementById('save');
@@ -397,28 +395,6 @@
             }
             else{
                 l_sub2.style.display = "none";
-            }
-        }
-        side_button3.onclick = function(){
-            var l_sub3 = document.getElementById('l_sub3');
-            if(l_sub3.style.display == 'none' || l_sub3.style.display==''){
-            l_sub3.style.display = "block";
-            l_sub3.style.position = "relative";
-            l_sub3.style.marginLeft = "10px";
-            }
-            else{
-                l_sub3.style.display = "none";
-            }
-        }
-        side_button4.onclick = function(){
-            var l_sub = document.getElementById('l_sub4');
-            if(l_sub4.style.display == 'none' || l_sub4.style.display==''){
-            l_sub4.style.display = "block";
-            l_sub4.style.position = "relative";
-            l_sub4.style.marginLeft = "10px";
-            }
-            else{
-                l_sub4.style.display = "none";
             }
         }
         search_box.onfocus = function(){
@@ -453,6 +429,12 @@
             const checkbox = document.getElementsByName('content');
             checkbox.forEach((checkbox) => {
                 checkbox.checked = selectAll.checked;
+            })
+        }
+        function selectAll1(selectAll1){
+            const checkbox = document.getElementsByName('content1');
+            checkbox.forEach((checkbox) => {
+                checkbox.checked = selectAll1.checked;
             })
         }
     </script>
