--- a/화면구성파일/SET구성품등록.html
+++ b/화면구성파일/SET구성품등록.html
@@ -200,8 +200,10 @@
             width: 100%;
             text-align: center;
             border: 1px solid black;
-/* ------------------------------------------------------------------ */
         }
+
+        /* ------------------------------------------------------------------ */ 
+        
         #view{
             width: 100%;
             text-align: center;
@@ -213,7 +215,13 @@
         #view td input{
             width: 100%;
         }
-        
+        .con1_search{
+            padding:0;
+            text-align: center;
+            position: absolute;
+            top: 25%;
+            left: 10%;
+        }
     </style>    
 </head>
 <body>
@@ -306,8 +314,11 @@
                     </td>
                     <td><input type="text" name="" id=""></td>
                     <td>품목군</td>
-                    <td><input type="text"></td>
-                    <td><input type="text" name="" id=""></td>
+                    <td>
+                        <input type="text">
+                        <button>+</button>
+                    </td>
+                    <td><input type="text" name="" id="" disabled></td>
                     <td>계정구분</td>
                     <td>
                         <select name="" id="">
@@ -322,7 +333,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>셋트품</td>
+                    <td>구성품</td>
                     <td>
                         <select name="" id="">
                             <option value="0">0.품번</option>
@@ -332,8 +343,11 @@
                     </td>
                     <td><input type="text" name="" id=""></td>
                     <td>품목군</td>
-                    <td><input type="text"></td>
-                    <td><input type="text" name="" id=""></td>
+                    <td>
+                        <input type="text">
+                        <button>+</button>
+                    </td>
+                    <td><input type="text" name="" id="" disabled></td>
                     <td>계정구분</td>
                     <td>
                         <select name="" id="">
@@ -346,18 +360,6 @@
                             <option value="6">6.저장품</option>
                         </select>
                     </td>
-                </tr>
-                <tr>
-                    <td>구성품유무</td>
-                    <td>
-                        <select name="" id="">
-                            <option value="2">전체</option>
-                            <option value="0">0.구성품 없는 세트 품목</option>
-                            <option value="1">1.구성품 있는 세트 품목</option>
-                        </select>
-                    </td>
-                    <td>기준일자</td>
-                    <td colspan="4"><input type="date"></td>
                 </tr>
             </table>
         </container1>
@@ -388,31 +390,21 @@
                     <td colspan="12">구성품 등록</td>
                 </thead>
                 <thead>
-                    <td style="width: 5%;"><input type="checkbox" name="content" onclick="selectAll(this)"></td>
-                    <td>순번</td>
-                    <td>품번</td>
+                    <td style="width: 5%;"><input type="checkbox" name="content1" onclick="selectAll1(this)"></td>
+                    <td>셋트품코드</td>
+                    <td>구성품코드</td>
                     <td>품명</td>
+                    <td>단위</td>
+                    <td>수량</td>
                     <td>규격</td>
-                    <td>단위(재고)</td>
-                    <td>수량(재고)</td>
-                    <td>단위(관리)</td>
-                    <td>수량(관리)</td>
-                    <td>시작일</td>
-                    <td>종료일</td>
-                    <td>비고</td>
                 </thead>
                 <tbody>
-                    <td style="width: 5%;"><input type="checkbox" value = "check1" id="check" name="content"/></td>
+                    <td style="width: 5%;"><input type="checkbox" value = "check1" id="check" name="content1"/></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
-                    <td><input type="text" name="" id=""></td>
-                    <td><input type="text" name="" id=""></td>
-                    <td><input type="text" name="" id=""></td>
-                    <td><input type="date"></td>
-                    <td><input type="date"></td>
                     <td><input type="text" name="" id=""></td>
                 </tbody>
             </table>
@@ -424,8 +416,6 @@
     <script>
         var side_button1 = document.getElementById('side1');
         var side_button2 = document.getElementById('side2');
-        var side_button3 = document.getElementById('side3');
-        var side_button4 = document.getElementById('side4');
         var search_box = document.getElementById('search');
         var num_box = document.getElementById('num');
         var save_button = document.getElementById('save');
@@ -450,28 +440,6 @@
             }
             else{
                 l_sub2.style.display = "none";
-            }
-        }
-        side_button3.onclick = function(){
-            var l_sub3 = document.getElementById('l_sub3');
-            if(l_sub3.style.display == 'none' || l_sub3.style.display==''){
-            l_sub3.style.display = "block";
-            l_sub3.style.position = "relative";
-            l_sub3.style.marginLeft = "10px";
-            }
-            else{
-                l_sub3.style.display = "none";
-            }
-        }
-        side_button4.onclick = function(){
-            var l_sub = document.getElementById('l_sub4');
-            if(l_sub4.style.display == 'none' || l_sub4.style.display==''){
-            l_sub4.style.display = "block";
-            l_sub4.style.position = "relative";
-            l_sub4.style.marginLeft = "10px";
-            }
-            else{
-                l_sub4.style.display = "none";
             }
         }
         search_box.onfocus = function(){
@@ -506,6 +474,12 @@
             const checkbox = document.getElementsByName('content');
             checkbox.forEach((checkbox) => {
                 checkbox.checked = selectAll.checked;
+            })
+        }
+        function selectAll1(selectAll1){
+            const checkbox = document.getElementsByName('content1');
+            checkbox.forEach((checkbox) => {
+                checkbox.checked = selectAll1.checked;
             })
         }
     </script>
