--- a/화면구성파일/물류실적담당자등록(품목).html
+++ b/화면구성파일/물류실적담당자등록(품목).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>물류실적담당자등록_거래처</title>
+    <title>Document</title>
     <style>
         *{
             margin: 0;
@@ -66,7 +66,6 @@
             height: 70%;
             border: 1px solid black;
             z-index: 1;
-            overflow: scroll;
         }
         #footer{
             position: absolute;
@@ -253,11 +252,14 @@
             font-family: 'Hanna';
         } */
         #table1 {
-            padding-top: 15px;
-            padding-left: 50px;
+            padding-top: 10px;
+            padding-left: 20px;
         }
         #table2 {
             width: 100%;
+        }
+        #contents2 {
+            overflow: scroll;
         }
     </style>    
 </head>
@@ -310,7 +312,7 @@
         <nav id="nav2">
             <button name="delete">삭제</button>
             <button name="lookup">조회</button>
-            <button name="lookup">조회</button>
+            <button name="lookup">저장</button>
             <button name="lookup">조회</button>
         </nav>
         <aside id = sidemenu>
@@ -330,7 +332,7 @@
                             <li><a href="#">품목등록</a></li>
                             <li><a href="#">창고/공정/외주공정등록</a></li>
                             <li><a href="#">물류관리내역등록</a></li>
-                            <li><a href="#">물류실적담당자등록(거래처)</a></li>
+                            <li><a href="#">물류실적담당자등록(고객)</a></li>
                             <li><a href="#">물류실적담당자등록(품목)</a></li>
                             <li><a href="#">검사유형등록</a></li>
                             <li><a href="#">SET구성품등록</a></li>
@@ -341,38 +343,62 @@
         <container1 id = contents1>
             <table id="table1">
                 <tr>
-                    <td align="center">거래처</td>
+                    <td align="center">계정</td>
                     <td>
-                        <input type="text">
-                        <button >+</button>
+                        <select name="" id="">
+                            <option value="0">0.원재료</option>
+                            <option value="1">1.부재료</option>
+                            <option value="2">2.제품</option>
+                            <option value="4">4.반제품</option>
+                            <option value="5">5.상품</option>
+                            <option value="6">6.저장품</option>
+                            <option value="7">7.비용</option>
+                            <option value="8">8.수익</option>
+                        </select>
                     </td>
-                    <td>
-                        <input type="text">
-                        ~
-                    </td>
-                    <td>
-                        <input type="text">
-                        <button>+</button>
-                    </td>
-                    <td>
-                        <input type="text">
-                    </td>
-                </tr>
-                <tr>
                     <td>
                         <select name="" id="">
                             <option value="0">0.전체</option>
                             <option value="1">1.영업</option>
                             <option value="2">2.구매</option>
-                            <option value="3">3.외주</option>
+                            <option value="3">3.자재</option>
+                            <option value="4">4.생산</option>
                         </select>
                     </td>
-                    <td align="center" >
-                        담당자
-                        <input type="text" style="width: 115px;">
-                        <button>+</button>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td>
-                        <input type="text" disabled >
+                        담당자
+                        <input type="text" style="width: 80px;">
+                        <button>+</button>
+                    </td>
+                    <td><input type="text" name="" id="" style="width: 100px;"></td>
+                </tr>
+                <tr>
+                    <td align="center">품목</td>
+                    <td>
+                        <input type="text" style="width: 80px;">
+                        <button>+</button>
+                    </td>
+                    <td>
+                        <input type="text" name="" id="" style="width: 80px;">
+                    </td>
+                    <td>~</td>
+                    <td>
+                        <input type="text" style="width: 80px;">
+                        <button>+</button>
+                    </td>
+                    <td>
+                        <input type="text" name="" id="" style="width: 80px;">
+                    </td>
+                    <td>품목군</td>
+                    <td>
+                        <input type="text" style="width: 80px;">
+                        <button>+</button>
+                    </td>
+                    <td>
+                        <input type="text" name="" id="" style="width: 80px;">
                     </td>
                 </tr>
             </table>
@@ -381,21 +407,17 @@
             <table id="table2">
                 <thead>
                     <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
-                    <td align="center">코드</td>
-                    <td align="center">거래처명</td>
+                    <td align="center">품번</td>
+                    <td align="center">품명</td>
+                    <td align="center">규격</td>
+                    <td align="center">단위</td>
                     <td align="center">영업담당자</td>
                     <td align="center">구매담당자</td>
-                    <td align="center">외주담당자</td>
-                    <td align="center">지역</td>
-                    <td align="center">거래처분류</td>
-                    <td align="center">기본납품처</td>
-                    <td align="center">영업기본단가유형</td>
-                    <td align="center">구매기본단가유형</td>
+                    <td align="center">자재담당자</td>
+                    <td align="center">생산담당자</td>
                 </thead>
                 <tbody>
                     <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
@@ -414,8 +436,6 @@
     <script>
         var side_button1 = document.getElementById('side1');
         var side_button2 = document.getElementById('side2');
-        var side_button3 = document.getElementById('side3');
-        var side_button4 = document.getElementById('side4');
         var search_box = document.getElementById('search');
         side_button1.onclick = function(){
             var l_sub1 = document.getElementById('l_sub1');
@@ -439,33 +459,17 @@
                 l_sub2.style.display = "none";
             }
         }
-        side_button3.onclick = function(){
-            var l_sub3 = document.getElementById('l_sub3');
-            if(l_sub3.style.display == 'none' || l_sub3.style.display==''){
-            l_sub3.style.display = "block";
-            l_sub3.style.position = "relative";
-            l_sub3.style.marginLeft = "10px";
-            }
-            else{
-                l_sub3.style.display = "none";
-            }
-        }
-        side_button4.onclick = function(){
-            var l_sub = document.getElementById('l_sub4');
-            if(l_sub4.style.display == 'none' || l_sub4.style.display==''){
-            l_sub4.style.display = "block";
-            l_sub4.style.position = "relative";
-            l_sub4.style.marginLeft = "10px";
-            }
-            else{
-                l_sub4.style.display = "none";
-            }
-        }
         search_box.onfocus = function(){
             document.getElementById("search").value = '';
         }
         search_box.onblur = function(){
             document.getElementById("search").value = ' 메뉴 검색';
+        }
+        function selectAll(selectAll){
+            const checkbox = document.getElementsByName('content');
+            checkbox.forEach((checkbox) => {
+                checkbox.checked = selectAll.checked;
+            })
         }
     </script>
 </body>
