--- a/화면구성파일/판매계획등록(고객별상세).html
+++ b/화면구성파일/판매계획등록(고객별상세).html
@@ -214,6 +214,13 @@
             width: 100%;
         }
         
+        .con1_search{
+            padding:0;
+            text-align: center;
+            position: absolute;
+            top: 25%;
+            left: 10%;
+        }
     </style>    
 </head>
 <body>
@@ -296,16 +303,16 @@
         </aside>
         <container1 id = contents1>
             <table class="con1_search">
-                <tr>
-                    <td>사업장</td>
+                <tr >
+                    <td align="center">사업장</td>
                     <td><input type="text" name="" id=""></td>
                     <td><button>+</button></td>
-                    <td><input type="text"></td>
-                    <td colspan="2">대상년월</td>
-                    <td colspan=""><button><<</button></td>
-                    <td colspan="2"><input type="text" value="2021"></td>
-                    <td colspan=""><button>>></button></td>
-                    <td>
+                    <td><input type="text" disabled></td>
+                    <td align="right" colspan="2">대상년월</td>
+                    <td colspan="2">
+                        <button><<</button>
+                        <input type="text" value="2021" style="width: 60px; text-align: center;">
+                        <button>>></button>
                         <select name="" id="">
                             <option value="1">1월</option>
                             <option value="2">2월</option>
@@ -323,14 +330,14 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>고객</td>
+                    <td align="center">고객</td>
                     <td><input type="text"></td>
                     <td><button>+</button></td>
-                    <td><input type="text"></td>
-                    <td>품목군</td>
+                    <td><input type="text" disabled></td>
+                    <td align="center">품목군</td>
                     <td><input type="text"></td>
                     <td><button>+</button></td>
-                    <td><input type="text"></td>
+                    <td><input type="text" disabled></td>
                 </tr>
             </table>
         </container1>
@@ -338,10 +345,10 @@
            <table id="view">
                 <thead>
                     <td><input type="checkbox" id="check" name="content" onclick="selectAll(this)"/></td>
-                    <td>고객코드</td>
-                    <td>고객명</td>
-                    <td>매출예상금</td>
-                    <td>계획부서</td>
+                    <td align="center">고객코드</td>
+                    <td align="center">고객명</td>
+                    <td align="center">매출예상금</td>
+                    <td align="center">계획부서</td>
                 </thead>
                 <tbody>
                     <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
@@ -355,18 +362,18 @@
         <container3 id="contents3">
             <table id="view">
                 <thead>
-                    <td style="width: 5%;"><input type="checkbox" name="content" onclick="selectAll(this)"></td>
-                    <td>품번</td>
-                    <td>품명</td>
-                    <td>규격</td>
-                    <td>단위(관리)</td>
-                    <td>수량</td>
-                    <td>단가</td>
-                    <td>매출예상금액</td>
-                    <td>비고</td>
+                    <td style="width: 5%;"><input type="checkbox" name="content1" onclick="selectAll1(this)"></td>
+                    <td align="center">품번</td>
+                    <td align="center">품명</td>
+                    <td align="center">규격</td>
+                    <td align="center">단위(관리)</td>
+                    <td align="center">수량</td>
+                    <td align="center">단가</td>
+                    <td align="center">매출예상금액</td>
+                    <td align="center">비고</td>
                 </thead>
                 <tbody>
-                    <td style="width: 5%;"><input type="checkbox" value = "check1" id="check" name="content"/></td>
+                    <td style="width: 5%;"><input type="checkbox" value = "check1" id="check" name="content1"/></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
@@ -385,8 +392,6 @@
     <script>
         var side_button1 = document.getElementById('side1');
         var side_button2 = document.getElementById('side2');
-        var side_button3 = document.getElementById('side3');
-        var side_button4 = document.getElementById('side4');
         var search_box = document.getElementById('search');
         var num_box = document.getElementById('num');
         var save_button = document.getElementById('save');
@@ -411,28 +416,6 @@
             }
             else{
                 l_sub2.style.display = "none";
-            }
-        }
-        side_button3.onclick = function(){
-            var l_sub3 = document.getElementById('l_sub3');
-            if(l_sub3.style.display == 'none' || l_sub3.style.display==''){
-            l_sub3.style.display = "block";
-            l_sub3.style.position = "relative";
-            l_sub3.style.marginLeft = "10px";
-            }
-            else{
-                l_sub3.style.display = "none";
-            }
-        }
-        side_button4.onclick = function(){
-            var l_sub = document.getElementById('l_sub4');
-            if(l_sub4.style.display == 'none' || l_sub4.style.display==''){
-            l_sub4.style.display = "block";
-            l_sub4.style.position = "relative";
-            l_sub4.style.marginLeft = "10px";
-            }
-            else{
-                l_sub4.style.display = "none";
             }
         }
         search_box.onfocus = function(){
@@ -467,6 +450,12 @@
             const checkbox = document.getElementsByName('content');
             checkbox.forEach((checkbox) => {
                 checkbox.checked = selectAll.checked;
+            })
+        }
+        function selectAll1(selectAll1){
+            const checkbox = document.getElementsByName('content1');
+            checkbox.forEach((checkbox) => {
+                checkbox.checked = selectAll1.checked;
             })
         }
     </script>
