ui 조정 및 스크립트 수정

--- a/화면구성파일/물류실적담당자등록(거래처).html
+++ b/화면구성파일/물류실적담당자등록(거래처).html
@@ -347,7 +347,7 @@
                         <button >+</button>
                     </td>
                     <td>
-                        <input type="text">
+                        <input type="text" disabled>
                         ~
                     </td>
                     <td>
@@ -355,7 +355,7 @@
                         <button>+</button>
                     </td>
                     <td>
-                        <input type="text">
+                        <input type="text" disabled>
                     </td>
                 </tr>
                 <tr>
