--- a/화면구성파일/물류실적담당자등록(품목).html
+++ b/화면구성파일/물류실적담당자등록(품목).html
@@ -373,7 +373,7 @@
                         <input type="text" style="width: 80px;">
                         <button>+</button>
                     </td>
-                    <td><input type="text" name="" id="" style="width: 100px;"></td>
+                    <td><input type="text" name="" id="" style="width: 100px;" disabled></td>
                 </tr>
                 <tr>
                     <td align="center">품목</td>
@@ -382,7 +382,7 @@
                         <button>+</button>
                     </td>
                     <td>
-                        <input type="text" name="" id="" style="width: 80px;">
+                        <input type="text" name="" id="" style="width: 80px;" disabled>
                     </td>
                     <td>~</td>
                     <td>
@@ -390,7 +390,7 @@
                         <button>+</button>
                     </td>
                     <td>
-                        <input type="text" name="" id="" style="width: 80px;">
+                        <input type="text" name="" id="" style="width: 80px;" disabled>
                     </td>
                     <td>품목군</td>
                     <td>
@@ -398,7 +398,7 @@
                         <button>+</button>
                     </td>
                     <td>
-                        <input type="text" name="" id="" style="width: 80px;">
+                        <input type="text" name="" id="" style="width: 80px;" disabled>
                     </td>
                 </tr>
             </table>
