--- a/화면구성파일/출고처리.html
+++ b/화면구성파일/출고처리.html
@@ -300,7 +300,7 @@
                     <td>사업장</td>
                     <td><input type="text" name="" id=""></td>
                     <td><button>+</button></td>
-                    <td><input type="text"></td>
+                    <td><input type="text" disabled></td>
                     <td>출고기간</td>
                     <td><input type="date"></td>
                     <td>~</td>
@@ -310,11 +310,11 @@
                     <td>고객</td>
                     <td><input type="text"></td>
                     <td><button>+</button></td>
-                    <td><input type="text"></td>
+                    <td><input type="text" disabled></td>
                     <td>출고창고</td>
                     <td><input type="text"></td>
                     <td><button>+</button></td>
-                    <td><input type="text"></td>
+                    <td><input type="text" disabled></td>
                 </tr>
             </table>
         </container1>
@@ -348,7 +348,7 @@
         <container3 id="contents3">
             <table id="view">
                 <thead>
-                    <td style="width: 5%;"><input type="checkbox" name="content" onclick="selectAll(this)"></td>
+                    <td style="width: 5%;"><input type="checkbox" name="content1" onclick="selectAll1(this)"></td>
                     <td>품번</td>
                     <td>품명</td>
                     <td>규격</td>
@@ -360,8 +360,7 @@
                     <td>합계액</td>
                 </thead>
                 <tbody>
-                    <td style="width: 5%;"><input type="checkbox" value = "check1" id="check" name="content"/></td>
-                    <td><input type="text" name="" id=""></td>
+                    <td style="width: 5%;"><input type="checkbox" value = "check1" id="check" name="content1"/></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
                     <td><input type="text" name="" id=""></td>
@@ -463,6 +462,12 @@
             const checkbox = document.getElementsByName('content');
             checkbox.forEach((checkbox) => {
                 checkbox.checked = selectAll.checked;
+            })
+        }
+        function selectAll1(selectAll1){
+            const checkbox = document.getElementsByName('content1');
+            checkbox.forEach((checkbox) => {
+                checkbox.checked = selectAll1.checked;
             })
         }
     </script>
